--- a/suivi/log-blaise.tex
+++ b/suivi/log-blaise.tex
@@ -1,6 +1,12 @@
 \documentclass{article}
+
 \title{Suivi du TIPE}
 \author{Blaise Bourret-Mathieu}
 \date{Année scolaire 2017-2018}
+
 \begin{document}
+
+\paragraph*{Avant le 29 Novembre}
+Tout.
+
 \end{document}
